video_analysis_app.yaml
apiVersion: v1
kind: Pod
metadata:
  name: video-streamer-pod
  labels:
    app: video-streamer
spec:
  containers:
  - name: video-streamer
    image: sakred22/k3s-edge-demo:streamer

---

apiVersion: v1
kind: Pod
metadata:
  name: metrics-processor-pod
  labels:
    app: metrics-processor
spec:
  containers:
  - name: metrics-processor
    image: sakred22/k3s-edge-demo:videoprocessor

# ---

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: display-service-deployment
# spec:
#   selector:
#     matchLabels:
#       app: display-service
#   template:
#     metadata:
#       labels:
#         app: display-service
#     spec:
#       containers:
#       - name: display-service
#         image: sakred22/k3s-edge-demo:webapp
#         ports:
#         - containerPort: 80

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: display-service-nodeport
# spec:
#   type: NodePort
#   selector:
#     app: display-service
#   ports:
#     - protocol: TCP
#       port: 80
#       nodePort: 30000
